# HomeWork_8

./: .env.sample  Dockerfile  READMY.md  docker-compose.yaml  groups.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
lms/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0002_subscription.py  0003_course_user_lesson_user.py  0004_alter_subscription_course_alter_subscription_user.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payment.py  csu.py
users/migrations/: 0002_payment.py  0003_alter_payment_options_payment_link_and_more.py  0004_alter_payment_type.py
